<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.rewheeldev.glsdk.sdk.view.MainLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </com.rewheeldev.glsdk.sdk.view.MainLayout>

        <!--region Camera position-->

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="Camera position"
            app:layout_constraintStart_toStartOf="@+id/gl_start"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/ll_cp_x"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center|clip_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/gl_end"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <TextView
                android:id="@+id/tv_cp_x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dp"
                android:text="@string/x" />

            <SeekBar
                android:id="@+id/sb_cp_x"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="@integer/camera_max_value"
                android:min="@integer/camera_min_value"
                android:progress="0" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_cp_y"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center|clip_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/gl_end"
            app:layout_constraintStart_toStartOf="@+id/ll_cp_x"
            app:layout_constraintTop_toBottomOf="@+id/ll_cp_x">

            <TextView
                android:id="@+id/tv_cp_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dp"
                android:text="@string/y" />

            <SeekBar
                android:id="@+id/sb_cp_y"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="@integer/camera_max_value"
                android:min="@integer/camera_min_value"
                android:progress="0" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_cp_z"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center|clip_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/gl_end"
            app:layout_constraintStart_toStartOf="@+id/ll_cp_y"
            app:layout_constraintTop_toBottomOf="@+id/ll_cp_y">

            <TextView
                android:id="@+id/tv_cp_z"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dp"
                android:text="@string/z" />

            <SeekBar
                android:id="@+id/sb_cp_z"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="@integer/camera_max_value"
                android:min="@integer/camera_min_value"
                android:progress="0" />

        </LinearLayout>

        <!--endregion-->


        <!--region Camera position-->


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Camera point direction"
            app:layout_constraintStart_toStartOf="@+id/ll_cp_z"
            app:layout_constraintTop_toBottomOf="@+id/ll_cp_z" />

        <LinearLayout
            android:id="@+id/ll_cpoint_x"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center|clip_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/gl_end"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <TextView
                android:id="@+id/tv_cpoint_x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dp"
                android:text="@string/x" />

            <SeekBar
                android:id="@+id/sb_cpoint_x"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="@integer/camera_max_value"
                android:min="@integer/camera_min_value"
                android:progress="0" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_cpoint_y"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center|clip_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/gl_end"
            app:layout_constraintStart_toStartOf="@+id/ll_cpoint_x"
            app:layout_constraintTop_toBottomOf="@+id/ll_cpoint_x">

            <TextView
                android:id="@+id/tv_cpoint_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dp"
                android:text="@string/y" />

            <SeekBar
                android:id="@+id/sb_cpoint_y"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="@integer/camera_max_value"
                android:min="@integer/camera_min_value"
                android:progress="0" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_cpoint_z"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center|clip_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/gl_end"
            app:layout_constraintStart_toStartOf="@+id/ll_cpoint_y"
            app:layout_constraintTop_toBottomOf="@+id/ll_cpoint_y">

            <TextView
                android:id="@+id/tv_cpoint_z"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dp"
                android:text="@string/z" />

            <SeekBar
                android:id="@+id/sb_cpoint_z"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="@integer/camera_max_value"
                android:min="@integer/camera_min_value"
                android:progress="0" />

        </LinearLayout>

        <!--endregion-->

        <!--        region UP vector-->
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Up Vector"
            app:layout_constraintStart_toStartOf="@+id/ll_cpoint_z"
            app:layout_constraintTop_toBottomOf="@+id/ll_cpoint_z" />


        <LinearLayout
            android:id="@+id/ll_vector_x"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center|clip_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/gl_end"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <TextView
                android:id="@+id/tv_vector_x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dp"
                android:text="@string/x" />

            <SeekBar
                android:id="@+id/sb_vector_x"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="@integer/camera_max_value"
                android:min="@integer/camera_min_value"
                android:progress="0" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_vector_y"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center|clip_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/gl_end"
            app:layout_constraintStart_toStartOf="@+id/ll_vector_x"
            app:layout_constraintTop_toBottomOf="@+id/ll_vector_x">

            <TextView
                android:id="@+id/tv_vector_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dp"
                android:text="@string/y" />

            <SeekBar
                android:id="@+id/sb_vector_y"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="@integer/camera_max_value"
                android:min="@integer/camera_min_value"
                android:progress="0" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_vector_z"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center|clip_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/gl_end"
            app:layout_constraintStart_toStartOf="@+id/ll_vector_y"
            app:layout_constraintTop_toBottomOf="@+id/ll_vector_y">

            <TextView
                android:id="@+id/tv_vector_z"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dp"
                android:text="@string/z" />

            <SeekBar
                android:id="@+id/sb_vector_z"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="@integer/camera_max_value"
                android:min="@integer/camera_min_value"
                android:progress="0" />

        </LinearLayout>

        <!--        endregion-->

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_camera_controllers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="ll_cpoint_y,ll_vector_z,textView2,ll_cp_z,ll_cp_y,ll_cpoint_x,textView,ll_cp_x,textView3,ll_vector_y,ll_cpoint_z,ll_vector_x"
            tools:visibility="visible" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.04" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.96107054" />

        <Button
            android:id="@+id/btn_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Up"
            app:layout_constraintBottom_toTopOf="@+id/btn_left"
            app:layout_constraintEnd_toEndOf="@+id/btn_down"
            app:layout_constraintStart_toStartOf="@+id/btn_down" />

        <Button
            android:id="@+id/btn_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="left"
            app:layout_constraintBottom_toTopOf="@+id/btn_down"
            app:layout_constraintEnd_toStartOf="@+id/btn_down" />

        <Button
            android:id="@+id/btn_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Right"
            app:layout_constraintBottom_toTopOf="@+id/btn_down"
            app:layout_constraintEnd_toStartOf="@+id/gl_end"
            app:layout_constraintTop_toTopOf="@+id/btn_left" />

        <Button
            android:id="@+id/btn_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="down"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_right" />

        <Button
            android:id="@+id/btn_zoom_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="zoom out"
            app:layout_constraintStart_toEndOf="@+id/btn_zoom_in"
            app:layout_constraintTop_toTopOf="@+id/btn_zoom_in" />

        <Button
            android:id="@+id/btn_zoom_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="zoom in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/gl_start" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <!-- this the navigation view which draws and shows the navigation drawer -->
    <!-- include the menu created in the menu folder -->

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/navigation_menu" />
</androidx.drawerlayout.widget.DrawerLayout>